<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Snax</string>

    <string name="alt_bottom_sheet_chevron">Bottom sheet expandable indicator</string>

    <string name="alt_bottom_sheet_max_results_button_minus">Decreasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_max_results_button_plus">Increasing maxium detected results
        button</string>
    <string name="alt_bottom_sheet_threshold_button_minus">Decreasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_threshold_button_plus">Increasing threshold of detected object
        results button</string>
    <string name="alt_bottom_sheet_thread_button_minus">Decrease the number of threads used</string>
    <string name="alt_bottom_sheet_thread_button_plus">Increase the number of threads used</string>

    <string name="label_interence_time">Inference Time</string>
    <string name="label_fps">Frames per Second</string>
    <string name="label_confidence_threshold">Threshold</string>
    <string name="label_max_results">Max Results</string>
    <string name="label_threads">Number of Threads</string>
    <string name="label_delegate">Delegate</string>
    <string name="label_models">ML Model</string>
    <string name="snax_prefs">SnaxPrefs</string>
    <string name="is_user_details_given">is_user_details_given</string>

    <string-array name="delegate_spinner_titles">
        <item>CPU</item>
        <item>GPU</item>
        <item>NNAPI</item>
    </string-array>

    <string-array name="models_spinner_titles">
        <item>MobileNet V1</item>
        <item>EfficientDet Lite0</item>
        <item>EfficientDet Lite1</item>
        <item>EfficientDet Lite2</item>
        <item>Model MK1</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age_range">Age Range</string>
    <string name="your_name">Your Name</string>
    <string name="your_age">Your Age</string>
    <string name="your_height">Height (cm)</string>
    <string name="your_weight">Weight (kg)</string>
    <string name="continue_next">Continue</string>
    <string name="take_photo">Take Photo</string>
    <string name="users_grocery">%s\'s Grocery</string>
    <string name="enter_your_details">Enter your Details</string>
    <string name="user_details">User Details</string>
    <string name="user_age">"Age: <b>%d"</b></string>
    <string name="user_weight">"Weight: <b>%d"</b>"</string>
    <string name="user_height">"Height: <b>%d"</b>"</string>
    <string name="user_goals">Goals</string>
    <string name="daily_activitiy">Daily Activity</string>
    <string name="settings">settings</string>
    <string name="muscle">Muscle</string>
    <string name="diet">Diet</string>
    <string name="maintain">Maintain</string>
    <string name="user_target">Your current target is %s</string>
    <string name="user_activity">You are active for <b>%d</b> hours</string>
    <string name="your_activity">Daily activity (in hours)</string>
    <string name="calories">%s kCal</string>
    <string name="grams">%s g</string>
    <string name="we_have_no_suggestions_for_you">We have no suggestions for you</string>
</resources>
